* Add tooltip hovers to 'on <device> <show command>' fields including (if   available): help, tag name, tag type, XPath.  Note this requires a supported   version of Junos running on the router (13.2+) * Add QTip2 to Clira

--- a/web/clira/parser-test.html
+++ b/web/clira/parser-test.html
@@ -20,6 +20,9 @@
     <script type="text/javascript" src="/external/jquery-ui/jquery-ui.js"></script>
     <script type="text/javascript" src="/external/jquery-checkbox/jquery.checkbox.js"></script> 
 
+    <link type="text/css" rel="stylesheet" href="/external/jquery-qtip/jquery.qtip.css"/>
+    <script type="text/javascript" src="/external/jquery-qtip/jquery.qtip.js"></script>
+
     <script type="text/javascript" src="/jquery/jquery.dbgpr.js"></script>
     <script type="text/javascript" src="/jquery/yform.js"></script> 
 
