--- a/juise-manual.html
+++ b/juise-manual.html
@@ -497,7 +497,7 @@ li.indline1 {
  
   } 
   @top-right {
-       content: "July 2013";
+       content: "August 2013";
  
   } 
   @top-center {
@@ -21895,24 +21895,34 @@ jQuery(function ($) {
         $("html").animate({ scrollTop: 0 }, 500);
     });
 
-    $("a", $right).click(function (event) {
-        event.preventDefault();
-        var id = this.href.split("#");
-        id = id[id.length - 1];
-
-        var $target = $(document.getElementById(id));
-        setActive($target.parents("div.content"));
-
-        $("html").animate({ scrollTop: 0 }, 500);
-    });
 
     $("a", $right).each(function (idx, elt) {
         /* Put the @title as the link value */
         var $elt = $(elt);
-        var t = $elt.attr("title");
         var href = $elt.attr("href");
-        if (t !== undefined && href !== undefined)
-            $elt.text(t);
+        var proto;
+
+        if (href) {
+            var len = href.indexOf(":");
+            if (len > 0) {
+                proto = href.substr(0, len);
+            }
+        }
+        if (proto != "http" && proto != "https") {
+            var t = $elt.attr("title");
+            if (t !== undefined && href !== undefined)
+                $elt.text(t);
+            $elt.click(function (event) {
+                event.preventDefault();
+                var id = this.href.split("#");
+                id = id[id.length - 1];
+
+                var $target = $(document.getElementById(id));
+                setActive($target.parents("div.content"));
+
+                $("html").animate({ scrollTop: 0 }, 500);
+            });
+        }
     });
 
     $("button#nav-prev").button({
@@ -21975,7 +21985,7 @@ jQuery(function ($) {
 </tr>
 <tr>
 <td class="header left"></td>
-<td class="header right">July 16, 2013</td>
+<td class="header right">August 6, 2013</td>
 </tr>
 </table></div>
 <p id="title" class="title">The JUISE Project: JUNOS User Interface Scripting Environment<br><span class="filename">juise-manual</span></p>
@@ -22765,11 +22775,11 @@ jQuery(function ($) {
 <a id="extensions" href="#extensions">Extension Libraries for juise</a>
 </h1>
 <p id="doc_section_11_p_1">The JUISE project includes the jcs extension library which allows invocation of NETCONF RPCs. This library is identical to the jcs library available under JUNOS. This section details the extension functions and element of those libraries.</p>
-<div class="digress tooltip note:" id="idp17511808"><table class="tooltip" cellpadding="0" cellspacing="0" id="table-idp17511808">
+<div class="digress tooltip note:" id="idp17503216"><table class="tooltip" cellpadding="0" cellspacing="0" id="table-idp17503216">
 <tr><td><div class="fancy-tooltip-header">note:: </div></td></tr>
 <tr><td><div class="fancy-tooltip-body"> <p>The jcs extension library is not a dynamic extension library and is only available when using the juise command. This needs to change, but is low priority.</p> </div></td></tr>
 </table></div>
-<a href="?" tabindex="9999" class="digress-anchor" onClick="return popClick(event, 'idp17511808'); " onmouseover="popUp(event, 'idp17511808')" onmouseout="popDown(event, 'idp17511808')"><span class="digress digress-anchor">[note:]</span></a><div class="content">
+<a href="?" tabindex="9999" class="digress-anchor" onClick="return popClick(event, 'idp17503216'); " onmouseover="popUp(event, 'idp17503216')" onmouseout="popDown(event, 'idp17503216')"><span class="digress digress-anchor">[note:]</span></a><div class="content">
 <h2 id="doc_section_11_1">
 <div class="self-section-number">
 <a href="#doc_section_11_1">11.1</a> </div>
