--- a/web/clira/index.html
+++ b/web/clira/index.html
@@ -85,6 +85,12 @@
     </div>
   </script>
 
+  <script type="text/x-handlebars" data-template-name="clira_messages">
+    {{#each this}}
+      {{view Clira.MessageView contentBinding="this"}}
+    {{/each}}
+  </script>
+
   <script src="/external/jquery/jquery.js"></script>
   <script src="/external/jquery-ui/jquery-ui-1.10.2.js"></script>
   <script src="/external/handlebars/handlebars.js"></script>
