Use ember.js 1.0 stable

--- a/web/clira/index.html
+++ b/web/clira/index.html
@@ -103,7 +103,7 @@
   <script src="/external/jquery/jquery.js"></script>
   <script src="/external/jquery-ui/jquery-ui-1.10.2.js"></script>
   <script src="/external/handlebars/handlebars.js"></script>
-  <script src="/external/ember/ember-1.0.0-rc.6.1.js"></script>
+  <script src="/external/ember/ember.js"></script>
   <script src="/external/ember-restless/ember-restless+extras.js"></script>
   <script src="/jquery/jquery.dbgpr.js"></script>
   <script src="parser.js"></script>
