General clira preferences using dynamic forms and localStorage adapter on ember-restless

--- a/web/clira/index.html
+++ b/web/clira/index.html
@@ -99,7 +99,7 @@
         <ul class="setupgrid">
           <li><a id="prefs-devices" href="#">Set Up Devices</a></li>
           <li><a id="prefs-groups" href="#">Set Up Groups</a></li>
-          <li><a id="prefs-general" href="#">General Preferences</a></li>
+          <li><a id="prefs-general" href="#" {{action "generalPref" target="view"}}>General Preferences</a></li>
         </ul>
       </div>
     </div>
