* Add "Connect on Setup" to New Device workflow, allowing the host key and   passwords to be prompted for up front

--- a/web/clira/parser-test.html
+++ b/web/clira/parser-test.html
@@ -105,6 +105,7 @@
       <div id="prefs-general-form" title="General"></div>
 
       <div id="prefs-dialog" title="Preferences" style="display: none"></div>
+      <div id="prefs-devices-connect" title="Connection Status" style="display: none; text-align: left"></div>
 
       <div id="target-list">
 	    <div id="target-title">Recent Targets:</div>
