Add qtip for on device commands and gmap includes in index

--- a/web/clira/index.html
+++ b/web/clira/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/themes/clira/addons-clira.css" class="ui-addon">
   <link rel="stylesheet" href="/css/clira.css" class="ui-main">
   <link rel="stylesheet" href="/external/jqgrid/ui.jqgrid.css"/>
+  <link rel="stylesheet" href="/external/jquery-qtip/jquery.qtip.css"/>
 </head>
 <body>
   <script type="text/x-handlebars">
@@ -154,6 +155,9 @@
   <script src="/external/jqgrid/grid.locale-en.js"></script>
   <script src="/external/jqgrid/jquery.jqGrid.src.js"></script>
   <script src="/jquery/jquery.dbgpr.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
+  <script src="/external/gmaps/gmaps.js"></script>
+  <script src="/external/jquery-qtip/jquery.qtip.js"></script>
   <script src="clira.prefs.js"></script>
   <script src="clira.muxer.js"></script>
   <script src="clira.js"></script>
