Fill commandInput when command on output header is clicked

--- a/web/clira/index.html
+++ b/web/clira/index.html
@@ -60,7 +60,7 @@
     <div class="output-header ui-state-default ui-widget-header ui-corner-all">
       {{view Clira.IconView iconClass="ui-icon-closethick" onClick="close"}}
       {{view Clira.IconView iconClass="ui-icon-minusthick,ui-icon-plusthick" onClick="collapse"}}
-      <b>{{controller.command}}</b>
+      <b {{action "commandClick"}}>{{controller.command}}</b>
       <div class="command-number">
         ({{controller.commandNumber}})
       </div>
