Display field title or label if they exist and fallback to name if none of them exist

--- a/web/clira/index.html
+++ b/web/clira/index.html
@@ -166,7 +166,13 @@
         <div class="dyn-form-item">
           {{#unless field.radio}}
             <label>
-              {{field.label}}
+              {{#if field.title}}
+                {{field.title}}
+              {{else}}{{#if field.label}}
+                  {{field.label}}
+              {{else}}
+                  {{field.name}}
+              {{/if}}{{/if}}
             </label>
           {{/unless}}  
           {{#if field.spacer}}
