Display label instead of title if present. Fix label and titles in prefs

--- a/web/clira/index.html
+++ b/web/clira/index.html
@@ -166,10 +166,10 @@
         <div class="dyn-form-item">
           {{#unless field.radio}}
             <label>
-              {{#if field.title}}
-                {{field.title}}
-              {{else}}{{#if field.label}}
-                  {{field.label}}
+              {{#if field.label}}
+                {{field.label}}
+              {{else}}{{#if field.title}}
+                  {{field.title}}
               {{else}}
                   {{field.name}}
               {{/if}}{{/if}}
