bindAttr is deprecated in favour of bind-attr

--- a/web/clira/index.html
+++ b/web/clira/index.html
@@ -96,7 +96,7 @@
   </script>
 
   <script type="text/x-handlebars" data-template-name="clira_message">
-    <div {{bindAttr class="view.uiType"}}>
+    <div {{bind-attr class="view.uiType"}}>
       {{#if output}}
         {{#unless output.noIcon}}
           <span class="ui-icon ui-icon-alert"></span>
